// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wpp-file-upload should render file upload 1`] = `
<wpp-file-upload class="wpp-file-upload" exportparts="file-item, wrapper, content, file-name, tooltip, loading, percentage, cross-icon">
  <mock:shadow-root>
    <slot name="label" part="slot-label"></slot>
    <slot name="description" part="slot-description"></slot>
    <div class="upload-wrapper" part="file-upload-container">
      <wpp-avatar aria-hidden="true" class="icon-file" icon="wpp-icon-file" role="presentation" size="l" tabindex="-1"></wpp-avatar>
      <div class="content" part="content">
        <p>
          <span class="label" part="label">
            Choose a file
          </span>
          <span class="text" part="text">
            to upload or drag it here
          </span>
        </p>
      </div>
      <p class="text-info" part="text-info">
        Only .jpg, .jpeg, .png file at 50 MB or less
      </p>
      <input accept=".jpg,.jpeg,.png" aria-label="Upload file" class="file-loader" multiple="" part="input" type="file">
    </div>
  </mock:shadow-root>
</wpp-file-upload>
`;

exports[`wpp-file-upload should render file upload with different accept file format 1`] = `
<wpp-file-upload .accept=".mov, .avi" class="wpp-file-upload" exportparts="file-item, wrapper, content, file-name, tooltip, loading, percentage, cross-icon">
  <mock:shadow-root>
    <slot name="label" part="slot-label"></slot>
    <slot name="description" part="slot-description"></slot>
    <div class="upload-wrapper" part="file-upload-container">
      <wpp-avatar aria-hidden="true" class="icon-file" icon="wpp-icon-file" role="presentation" size="l" tabindex="-1"></wpp-avatar>
      <div class="content" part="content">
        <p>
          <span class="label" part="label">
            Choose a file
          </span>
          <span class="text" part="text">
            to upload or drag it here
          </span>
        </p>
      </div>
      <p class="text-info" part="text-info">
        Only .jpg, .jpeg, .png file at 50 MB or less
      </p>
      <input accept=".jpg,.jpeg,.png" aria-label="Upload file" class="file-loader" multiple="" part="input" type="file">
    </div>
  </mock:shadow-root>
</wpp-file-upload>
`;

exports[`wpp-file-upload should render file uploader with file items based on url 1`] = `
<wpp-file-upload class="wpp-file-upload" exportparts="file-item, wrapper, content, file-name, tooltip, loading, percentage, cross-icon">
  <mock:shadow-root>
    <slot name="label" part="slot-label"></slot>
    <slot name="description" part="slot-description"></slot>
    <div class="upload-wrapper" part="file-upload-container">
      <wpp-avatar aria-hidden="true" class="icon-file" icon="wpp-icon-file" role="presentation" size="l" tabindex="-1"></wpp-avatar>
      <div class="content" part="content">
        <p>
          <span class="label" part="label">
            Choose a file
          </span>
          <span class="text" part="text">
            to upload or drag it here
          </span>
        </p>
      </div>
      <p class="text-info" part="text-info">
        Only .jpg, .jpeg, .png file at 50 MB or less
      </p>
      <input accept=".jpg,.jpeg,.png" aria-label="Upload file" class="file-loader" multiple="" part="input" type="file">
    </div>
    <div class="file-list-wrapper" part="list-wrapper">
      <ul class="file-list" part="file-list" role="list">
        <wpp-file-upload-item class="file-upload-item wpp-file-upload-item" exportparts="file-item, wrapper, content, file-name, tooltip, loading, percentage, cross-icon" part="file-item" role="listitem">
          <mock:shadow-root>
            <div class="item-wrapper" part="file-item">
              <div class="content-wrapper" part="wrapper">
                <div class="block" part="content">
                  <wpp-icon-image></wpp-icon-image>
                  <wpp-tooltip part="tooltip" text="FileData.png">
                    <p class="name" part="file-name" title="FileData.png">
                      FileData.png
                    </p>
                  </wpp-tooltip>
                  <p class="loading" part="loading">
                    45 KB
                  </p>
                </div>
                <div class="controls-wrapper" part="controls">
                  <wpp-icon-cross aria-label="Remove file FileData.png" class="cross-icon" part="cross-icon" role="button" tabindex="0"></wpp-icon-cross>
                </div>
              </div>
            </div>
          </mock:shadow-root>
        </wpp-file-upload-item>
        <wpp-file-upload-item class="file-upload-item wpp-file-upload-item" exportparts="file-item, wrapper, content, file-name, tooltip, loading, percentage, cross-icon" part="file-item" role="listitem">
          <mock:shadow-root>
            <div class="item-wrapper" part="file-item">
              <div class="content-wrapper" part="wrapper">
                <div class="block" part="content">
                  <wpp-icon-image></wpp-icon-image>
                  <wpp-tooltip part="tooltip" text="FileDataSecond.png">
                    <p class="name" part="file-name" title="FileDataSecond.png">
                      FileDataSecond.png
                    </p>
                  </wpp-tooltip>
                  <p class="loading" part="loading">
                    452 KB
                  </p>
                </div>
                <div class="controls-wrapper" part="controls">
                  <wpp-icon-cross aria-label="Remove file FileDataSecond.png" class="cross-icon" part="cross-icon" role="button" tabindex="0"></wpp-icon-cross>
                </div>
              </div>
            </div>
          </mock:shadow-root>
        </wpp-file-upload-item>
      </ul>
    </div>
  </mock:shadow-root>
</wpp-file-upload>
`;
